added wordcloud feature

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "8a50a1a3",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "3b7b4134",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "266bdacb",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "0a3ec5eb",
    "metadata": {},
    "outputs": [],
@@ -83,12 +83,13 @@
     "    words = tokenizer.tokenize(text)\n",
     "    stop_words = stopwords.words('english')\n",
     "    removing_stop_words = [w.lower() for w in words if w.lower() not in stop_words]\n",
-    "    return removing_stop_words"
+    "    tokens = [t.lemma_ for t in removing_stop_words]\n",
+    "    return tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "93525792",
    "metadata": {},
    "outputs": [],
@@ -110,12 +111,12 @@
     "        sorted_dict[w] = num_words[w]\n",
     "\n",
     "\n",
-    "    return sorted_dict"
+    "    return sorted_dict, ' '.join(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "57e2a9a1",
    "metadata": {},
    "outputs": [],
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "feb92526",
    "metadata": {},
    "outputs": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "df449aca",
    "metadata": {},
    "outputs": [],
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "4c206f2e",
    "metadata": {},
    "outputs": [
@@ -390,7 +391,7 @@
        " \"wouldn't\"]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,8 +402,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "3f3ac454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = process_html(\"https://www.geeksforgeeks.org/deploy-python-flask-app-on-heroku/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "a794742d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_wordcloud(texts):\n",
+    "    resp = requests.post('https://quickchart.io/wordcloud', json={\n",
+    "        'format': 'png',\n",
+    "        'width': 500,\n",
+    "        'height': 500,\n",
+    "        'fontScale': 15,\n",
+    "        'scale': 'linear',\n",
+    "        'removeStopwords': True,\n",
+    "        'minWordLength': 4,\n",
+    "        'text': texts,\n",
+    "    })\n",
+    "    with open('static/newscloud.png', 'wb') as f:\n",
+    "        f.write(resp.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f7b4c00a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'google': 2, 'search': 2, 'images': 1, 'maps': 1, 'play': 1, 'youtube': 1, 'news': 1, 'gmail': 1, 'drive': 1, 'web': 1, 'history': 1, 'settings': 1, 'sign': 1, 'advanced': 1, 'advertising': 1, 'programs': 1, 'business': 1, 'solutions': 1, '2022': 1, 'privacy': 1, 'terms': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result, texts = word_count_json(\"https://www.google.com/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6b810101",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'google search images maps play youtube news gmail drive web history settings sign advanced search advertising programs business solutions google 2022 privacy terms'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texts.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "50b64199",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_wordcloud(texts.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "bcdd6d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['google',\n",
+       " 'search',\n",
+       " 'images',\n",
+       " 'maps',\n",
+       " 'play',\n",
+       " 'youtube',\n",
+       " 'news',\n",
+       " 'gmail',\n",
+       " 'drive',\n",
+       " 'web',\n",
+       " 'history',\n",
+       " 'settings',\n",
+       " 'sign',\n",
+       " 'advanced',\n",
+       " 'search',\n",
+       " 'advertising',\n",
+       " 'programs',\n",
+       " 'business',\n",
+       " 'solutions',\n",
+       " 'google',\n",
+       " '2022',\n",
+       " 'privacy',\n",
+       " 'terms']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenzie_text(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "57fcbc9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'lemma_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-a266c56ebbda>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtokenzie_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-49-d86e27f152b7>\u001b[0m in \u001b[0;36mtokenzie_text\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mstop_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'english'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mremoving_stop_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwords\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstop_words\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mtokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlemma_\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mremoving_stop_words\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mremoving_stop_words\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-49-d86e27f152b7>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mstop_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'english'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mremoving_stop_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwords\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstop_words\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mtokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlemma_\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mremoving_stop_words\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mremoving_stop_words\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'lemma_'"
+     ]
+    }
+   ],
+   "source": [
+    "tokenzie_text(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "26d1f21a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "program  :  program\n",
+      "programs  :  program\n",
+      "programmer  :  programm\n",
+      "programming  :  program\n",
+      "programmers  :  programm\n"
+     ]
+    }
+   ],
+   "source": [
+    "  \n",
+    "ps = PorterStemmer()\n",
+    " \n",
+    "# choose some words to be stemmed\n",
+    "words = [\"program\", \"programs\", \"programmer\", \"programming\", \"programmers\"]\n",
+    " \n",
+    "for w in words:\n",
+    "    print(w, \" : \", ps.stem(w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56176548",
    "metadata": {},
    "outputs": [],
    "source": []
